[package]
name = "merchantIndexGrabber"
version = "0.2.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
mimalloc = { version = "^0.1", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
rayon = "1.7.0"
serde_json = "^1.0"
openmw-config = "0.1.92"
vfstool_lib = "0.2.3"

[dependencies.tes3]
git = "https://github.com/Greatness7/tes3"
branch = "main"
features = ["esp", "nif"]
