[package]
name = "t3crc"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.0"
native-dialog = "0.9.4"
openmw-config = "0.1.92"
serde = "1.0.228"
serde_json = "1.0.145"
vfstool_lib = "0.2.3"
